--- a/style-mobile.css
+++ b/style-mobile.css
@@ -4,44 +4,21 @@
   src: url(../fonts/league-spartan/LeagueSpartan-Bold.otf) format("truetype");
 }
 
+
+
 * {
   font-family: 'LeagueSpartan', sans-serif;
 }
 
-
-.contact {
-  position: relative;
+.basic-section {
   display: flex;
   flex-direction: column;
-  margin: 50px ;
-  padding: 10px;
+  background-color: #fffbf6;
+  border-radius: 3px;
   justify-content: center;
-  align-items: center;
-  max-width: 800px;
-  min-height: 300px;
-  background-color: #FDF7F0;
-  border: 1px solid rgba(0, 0, 0, 0.565);
-}
-
-.contact h2 {
-  color: #000000;
-}
-
-table {
-  font-size: 90%;
-  width: 90%;
-  border-collapse: collapse;
-  text-align: left;
-}
-
-th, td {
-  padding: 10px;
-  border: 1px solid black;
-}
-
-th {
-  background-color: white;
-  padding: 30px;
+  max-width: 400px;
+  min-height: 100px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
 }
 
 #hamburger-logo {
@@ -62,6 +39,14 @@ nav {
     
 }
 
+li{
+  font-size: small;
+  margin: 20px 0 ;
+  padding: 10px;
+  list-style: none;
+  position: relative;
+}
+
 .container-section {
   display: flex;
   flex-direction: column; 
@@ -70,14 +55,6 @@ nav {
   margin: 50px;
   flex-grow: 1 ;
   
-}
-
-li{
-    font-size: small;
-    margin: 20px 0 ;
-    padding: 10px;
-    list-style: none;
-    position: relative;
 }
 
   
@@ -91,14 +68,7 @@ h1 {
 }
 
 
-.rubrique {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(0, 0, 0);
-  justify-content: center;
-  max-width: 400px;
-  min-height: 100px;
-}
+
 
 p {
   font-family: "Jura", serif;
@@ -106,7 +76,7 @@ p {
   text-align: justify;
   padding: 20px;
   font-size: large;
-  color: #FDF7F0;
+  color: #000000;
   word-wrap: break-word;
   text-indent: 30px;
 }
@@ -119,7 +89,7 @@ strong {
 
 h2 {
   text-align: center;
-  color: #FDF7F0;
+  color: #373737;
   word-wrap: break-word;
 }
 
@@ -153,6 +123,7 @@ body {
   font-size: large;
   display: block;
   /* Pour que le menu hamburger s'affiche toujours */
+  margin-top: 20px;
   text-align: right;
   /* Pour que le menu hamburger soit "rangé" par défaut */
   transform: translateX(-185px);
@@ -168,6 +139,25 @@ body {
   bottom: 0;
   right: 0;
   margin: 10px;
+  height: 40px;
+  align-items: center;
+}
+
+.PDFButton {
+    display: flex;
+    z-index: 1000;
+    position: fixed;
+    bottom: 0;
+    left : 0;
+    margin: 10px;
+    height: 40px;
+    background-color: #ff0000;
+    align-items: center; 
+}
+
+.PDFButton a {
+    color: #ffffff;
+
 }
 
 button {
@@ -175,6 +165,7 @@ button {
   border : 1px solid;
   border-radius: 2px;
   font-size: x-large;
+
 }
 
 
@@ -185,24 +176,40 @@ button {
   gap: 20px;
 }
 
-.mes-coordonnées h3 {
+.coordonneées h3 {
   display: flex;
   justify-content: center;
-
+  
 }
 
-.email, .tel {
+
+
+.coordonneées {
  display: flex;
- justify-content: space-between;
+ flex-direction: column;
+ align-items: center;
+ border: 1px solid #cbcbcb;
+ border-radius: 3px;
+ box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+ width: 300px;
+ margin: auto;
+ margin-top: 20px;
+}
+
+.coordonneées p {
+  font-family: "Jura", serif;
+  justify-content: center;
+  color: #000000;
+  font-size: 90%;
   
 }
 
-.email p, .tel p {
-  font-family: "Jura", serif;
-  font-style: normal;
-  justify-content: space-between;
-  color: #000000;
-  
+.contact-row {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 
@@ -272,23 +279,6 @@ li :hover::after{
   background-color: #000000; /* Couleur du soulignement */
 }
 
-.text-style-colummn {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-}
- 
 
-#PDFbutton {
-  border-radius: 23px;
-  border: 3px solid rgb(254, 5, 5);
-  padding: 0px;
-  font-size: 70%;
-}
 
-#white {
-  display: flex;
-  color : white;
-  justify-content: center;
-}
   
