--- a/style-desktop.css
+++ b/style-desktop.css
@@ -42,6 +42,9 @@
       box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
     }
     
+    nav a {
+      font-size: medium;
+    }
     
     ul {
       display: flex;
