--- a/style-desktop.css
+++ b/style-desktop.css
@@ -1,5 +1,15 @@
 @media (min-width: 1024px) {
   
+  body {
+   
+    background-size: cover;
+    z-index: -1;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    
+  }
+
 
     .contact {
         position: relative;
@@ -22,7 +32,7 @@
     }
     
     h1 {
-     background-color: #00000000;
+     background-color: #fbf8f878;
      
     }
     
@@ -89,4 +99,10 @@
       flex-direction: column;
       gap: 120px;
     }
+
+    .mainTitle {
+      
+      font-size: x-large;
+    }
+
     }
