--- a/style-mobile.css
+++ b/style-mobile.css
@@ -5,24 +5,38 @@
 }
 
 
+body {
+  background-image: url('image/pattern-gris.png');
+  z-index: -1;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: 150%;
+}
 
-p, a, a strong {
+
+
+
+
+
+p, a strong {
 
     font-family: "Merriweather", serif;
 }
 
-h1, h2, h3, h4 {
-  font-family: "Rozha One", serif;
+h1, h2, h3, h4, a  {
+  font-family: "LeagueSpartan";
 }
 .basic-section {
   display: flex;
   flex-direction: column;
   background-color: #fffbf6;
   border-radius: 3px;
-  justify-content: center;
-  max-width: 400px;
-  min-height: 100px;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  min-width: unset ;
+  max-width: 340px;
+  min-height: auto;
+  margin-bottom: auto;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3)
+  
 }
 
 #hamburger-logo {
@@ -51,13 +65,15 @@ li{
   position: relative;
 }
 
+
+
 .container-section {
   display: flex;
-  flex-direction: column; 
-  gap: 40px; 
-  align-items: center;
+  flex-direction: column;
+  align-items:center;
   margin: 50px;
-  flex-grow: 1 ;
+  gap : 50px;
+
   
 }
 
@@ -77,7 +93,9 @@ h1 {
 p {
   font-style: normal;
   text-align: justify;
-  padding: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   font-size: large;
   color: #000000;
   word-wrap: break-word;
@@ -91,6 +109,7 @@ strong {
 }
 
 h2 {
+  margin-top: 30px;
   text-align: center;
   color: #373737;
   word-wrap: break-word;
@@ -154,21 +173,30 @@ body {
     left : 0;
     margin: 10px;
     height: 40px;
-    background-color: #ff0000;
+    background-color: #494949;
+    border:solid 2px #ff0000;
     align-items: center; 
 }
 
 .PDFButton a {
     color: #ffffff;
+    
+              
 
 }
+
+
+.PDFButton:hover, .contactButton:hover {
+  transform: scale(1.03); /* Agrandit le bouton de 10% */
+}
+
 
 button {
   background-color: #FDF7F0;
   border : 1px solid;
   border-radius: 2px;
   font-size: x-large;
-
+  
 }
 
 
@@ -242,7 +270,7 @@ nav a, a  {
   color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 10px;
-  font-family: "Rozha One", serif;
+  
 }
 
 
@@ -253,7 +281,8 @@ label {
   color: black;
   position: relative;
   border-radius: 5px;
-  border: 1px solid black;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  
 }
 
 
