--- a/style-desktop.css
+++ b/style-desktop.css
@@ -1,108 +1,105 @@
 @media (min-width: 1024px) {
-  
+
+  /* Corps de la page */
   body {
-   
-    background-size: cover;
-    z-index: -1;
-    background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    
+    background-attachment: fixed;
+    z-index: -1;
   }
 
+  /* Section contact */
+  .contact {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    min-height: 300px;
+    background-color: #FDF7F0;
+    border: 1px solid rgba(0, 0, 0, 0.565);
+  }
 
-    .contact {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        padding: 10px;
-        justify-content: center;
-        align-items: center;
-        max-width: 800px;
-        min-height: 300px;
-        background-color: #FDF7F0;
-        border: 1px solid rgba(0, 0, 0, 0.565);
-      }
+  /* Titres */
+  h1 {
+    background-color: #fbf8f878;
+  }
 
+  /* Bouton PDF */
+  #PDFbutton {
+    border-radius: 23px;
+    border: 3px solid rgb(254, 5, 5);
+    padding: 20px;
+  }
 
+  #PDFbutton:hover {
+    color: black;
+    background-color: #ff0000;
+  }
 
-    #hamburger-logo {
-      display: none;
-    }
-    
-    h1 {
-     background-color: #fbf8f878;
-     
-    }
-    
-    #PDFbutton {
-      border-radius: 23px;
-      border: 3px solid rgb(254, 5, 5);
-      padding: 20px;
-    }
-    
-    #PDFbutton:hover  {
-      color : black;
-      background-color: #ff0000
-     }
-    
-    nav {
-      transform: translateX(0px);
-      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
-    }
-    
-    nav a {
-      font-size: medium;
-    }
-    
-    ul {
-      display: flex;
-      flex-direction: row;
-    }
-    
-    li {
-      padding: 5px;
-    }
-    
-    nav {
-      display: flex;
-      justify-content: end;
-      width: 100%;
-      position: fixed;
-      z-index: 1000;
-      background-color: #fdf7f0ee;
-    
-      /* Pour que les liens soient "rangés" par défaut */
-    }
-    
-    .none {
-      display: none;
-    }
-    
-    .container-section {
-      display: flex;
-      flex-direction: initial;
-      flex-wrap: wrap;
-      gap: 90px;
-      max-width: 100%;
-      margin: 100px;
-      height: 600px;
-      margin-top: 100px;
-      position :relative ;
-      justify-content: center ;
-      align-items: stretch;
-    }
-    
-    .text-style-colummn {
-      display: flex;
-      flex-direction: column;
-      gap: 120px;
-    }
+  /* Menu de navigation */
+  nav {
+    transform: translateX(0);
+    display: flex;
+    justify-content: end;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+    background-color: #fdf7f0ee;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  }
 
-    .mainTitle {
-      
-      font-size: x-large;
-    }
+  nav a {
+    font-size: medium;
+  }
 
-    }
+  ul {
+    display: flex;
+    flex-direction: row;
+  }
+
+  li {
+    padding: 5px;
+  }
+
+  /* Cacher l'élément avec la classe .none */
+  .none {
+    display: none;
+  }
+
+  /* Section contenant */
+  .container-section {
+    display: flex;
+    flex-direction: initial;
+    flex-wrap: wrap;
+    gap: 90px;
+    max-width: 100%;
+    margin: 100px;
+    height: 600px;
+    margin-top: 100px;
+    position: relative;
+    justify-content: center;
+    align-items: stretch;
+  }
+
+  /* Style des colonnes de texte */
+  .text-style-colummn {
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+  }
+
+  /* Titre principal */
+  .mainTitle {
+    font-size: x-large;
+  }
+
+  /* Cacher le logo hamburger sur les grands écrans */
+  #hamburger-logo {
+    display: none;
+  }
+
+}
