--- a/style-desktop.css
+++ b/style-desktop.css
@@ -102,4 +102,16 @@
     display: none;
   }
 
+  .scrolled .competences {
+    position: fixed;
+    left: 90%;
+    top: 150px;
+    padding: 0;
+    
+    flex-direction: column;
+    transform: none;
+    width: 40px;
+  }
+
+
 }
