--- a/style-desktop.css
+++ b/style-desktop.css
@@ -75,7 +75,7 @@
     display: flex;
     flex-direction: initial;
     flex-wrap: wrap;
-    gap: 90px;
+    gap: 50px;
     max-width: 100%;
     margin: 100px;
     height: 600px;
@@ -113,5 +113,37 @@
     width: 40px;
   }
 
+
+
+
+  .section-comp  {
+    position: relative;
+    display: flex;
+    font-size: x-large;
+    gap: 40px;
+    margin-bottom: 500px;
+    flex-direction: column;
+  }
+  
+  .section-comp::after  {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 10px;
+    background-color: var(--bar-comp-color); /* Transparence pour le soulignement */
+  }
+  
+  .project {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  
+  .projectDone {
+    display: flex;
+    padding-right: 300px ;
+    padding-left: 30px;
+  }
 
 }
