--- a/style-mobile.css
+++ b/style-mobile.css
@@ -440,6 +440,34 @@ h4 {
   background-color: var(--jauge-color);
 }
 
+.dernier-cube {
+  border-top-right-radius: 19px;
+  border-bottom-right-radius: 19px;
+  width: 10%;
+  height: var(--height-jauge);
+  background-color: var(--jauge-color);
+}
+
+.flag {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: large;
+}
+
+.section-flag {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+  padding-bottom: 100px;
+}
+
+
+
+
 
 /* Liste index */
 
