--- a/style-desktop.css
+++ b/style-desktop.css
@@ -158,6 +158,18 @@
     padding-left: 30px;
   }
 
+  footer {
+    position: relative;
+   display: flex;
+   justify-content: center;
+   
+   gap: 30px;
+   padding-top: 70px;
+   background-color: var(--background-color-footer);
+   flex-wrap: wrap;
+   
+   padding-bottom: 20px;
+  }
 
 
 }
