--- a/style-mobile.css
+++ b/style-mobile.css
@@ -396,6 +396,7 @@ label {
 .projectDone {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 h4 {
@@ -485,10 +486,6 @@ h4 {
   margin-right: 20px;
 }
 
-li {
-  list-style: none;
-}
-
 
 footer {
   position: relative;
@@ -512,4 +509,19 @@ footer > a {
   display: flex;
   justify-content: flex-start;
   margin-left: 40px;
+}
+
+.tools {
+  display: flex;
+  flex-direction: column;
+  font-size: large;
+  gap: 100px;
+  justify-content: center;
+
+}
+
+.tools-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
