--- a/style-desktop.css
+++ b/style-desktop.css
@@ -176,7 +176,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-   
+    display: flex;
+    padding-bottom: 200px;
+    gap: 100px;
   }
 
+  .compButton {
+    font-size: large;
+  }
 }
